Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Bijectiv</h1>
-        <h2></h2>
+        <h2>Intelligent object-to-object mapping for .NET</h2>
         <a href="https://github.com/TheMouthOfACow/bijectiv" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -78,6 +78,16 @@ $ git checkout gh-pages
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-5245850-6");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
