blog updated --tmoac

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
 
 	            </div>
             <div id="foot">
-	            <p>Rebuild All succeeded - 2014 - London - UK | <a href="http://github.com/TheMouthOfACow">http://github.com/TheMouthOfACow</a> | <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0 licence</a>
+	            <p>Rebuild All succeeded - 2014 - London - UK | <a href="http://github.com/TheMouthOfACow">http://github.com/TheMouthOfACow</a> | <a href="https://twitter.com/TheMouthOfACow">https://twitter.com/TheMouthOfACow</a> | <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0 licence</a>
 	            </p>
             </div>
             <div id="overlay"></div>
